# indic-tokenizer

./: .testr.conf  .travis.yml  AUTHORS  ChangeLog  Makefile  README.rst  indic_tokenizer.py  roman_tokenizer.py  setup.cfg  setup.py
irtokz/: __init__.py  indic_tokenize.py  indic_tokenizer.py  roman_tokenize.py  roman_tokenizer.py
irtokz/tests/: test_tokenizer.py
