[metadata]
name = irtokz
summary = Tokenizer for Indian Scripts and Roman Script 
description-file =
  README.rst
author = Irshad Ahmad Bhat
author-email = irshad.bhat@research.iiit.ac.in
classifier =
  #Framework :: Flask
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Science/Research 
  License :: MIT
  Programming Language :: Python
  Programming Language :: Python :: 2.7

[files]
packages = 
    irtokz

[entry_points]
console_scripts =
    ind-tokz = irtokz:ind_main 
    rom-tokz = irtokz:rom_main

[build-sphinx]
all_files = 1
source-dir = docs

[wheel]
universal = 1

